# addonfactory-ucc-library

./: .fossa.yml  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .releaserc  Dockerfile-splunk  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: aggreements.yaml  build-test-release.yml  release-notes.yaml  snyk.yaml  sr-release.sh
.reuse/: dep5
scripts/: build-demo-addon.sh
splunktaucclib/: __init__.py  alert_actions_base.py  cim_actions.py  config.py
splunktaucclib/common/: __init__.py  log.py  rwlock.py  schema_meta.py  xml_dom_parser.py
splunktaucclib/data_collection/: ta_checkpoint_manager.py  ta_config.py  ta_consts.py  ta_data_client.py  ta_data_collector.py  ta_data_loader.py  ta_helper.py  ta_mod_input.py
splunktaucclib/global_config/: __init__.py  configuration.py  schema.py
splunktaucclib/legacy/: credentials.py  rest.py  util.py
splunktaucclib/modinput_wrapper/: base_modinput.py
splunktaucclib/rest_handler/: __init__.py  admin_external.py  base.py  base_hook_mixin.py  cred_mgmt.py  credentials.py  datainput.py  eai.py  entity.py  error.py  error_ctl.py  handler.py  multimodel.py  normaliser.py  poster.py  schema.py  teardown.py  util.py  validator.py
splunktaucclib/rest_handler/endpoint/: __init__.py  converter.py  field.py  validator.py
splunktaucclib/splunk_aoblib/: rest_helper.py  rest_migration.py  setup_util.py  utility.py
tests/: conftest.py
tests/integration/: test_rest_handler_handler.py
tests/integration/demo/: README.md  additional_packaging.py  globalConfig.json
tests/integration/demo/package/: app.manifest
tests/integration/demo/package/LICENSES/: Apache-2.0.txt
tests/integration/demo/package/README/: inputs.conf.spec
tests/integration/demo/package/default/: app.conf  inputs.conf
tests/unit/: conftest.py  fake_module.py  test_admin_external.py  test_alert_actions_base.py  test_rest_handler_credentials.py  test_rest_handler_error.py
