# SPDX-FileCopyrightText: 2020 Splunk Inc.
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "splunktaucclib"
version = "0.0.0"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.7"
solnlib = "^4.0.0"
splunk-sdk = "1.6.16"
splunktalib = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest-expect = "^1.1.0"
pytest = "^6.2"
pytest-cov = "^3"
poetry-dynamic-versioning = "^0.13"
tomlkit = "^0"
reuse = "*"
pre-commit = "^2.15.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
