#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "splunktaucclib"
version = "6.0.7"
description = ""
authors = ["Splunk <addonfactory@splunk.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.7"
splunktalib = "^3.0.0"
requests = "^2.26.0"
PySocks = "^1.7.1"
splunk-sdk = ">=1.6.18"
solnlib = "^4.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
splunk-add-on-ucc-framework = "^5.19.0"
requests = "^2.28.1"
splunk-packaging-toolkit = "^1.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

